--- a/1-basics/styles.css
+++ b/1-basics/styles.css
@@ -11,6 +11,10 @@ body {
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 100px 200px 300px;
+    gap: 10px;
+    justify-items: stretch;
+    align-items: stretch;
 }
 
 .grid-container > div {
@@ -18,4 +22,30 @@ body {
     text-align: center; 
     padding: 20px;
     border: 1px solid #777; /* adding border to each grid item */
+}
+
+.grid-container > div:nth-child(1) {
+    grid-column: 1 / span 2;
+}
+
+.grid-container > div:nth-child(2) {
+    grid-column: span 3;
+}
+
+.grid-container > div:nth-child(3) {
+    grid-column: span 1;
+}
+
+.grid-container > div:nth-child(4) {
+    grid-column: 2 / 6; /* this time were starting on line 2 */
+    align-self: end;
+}
+
+.grid-container > div:nth-child(5) {
+    grid-column: span 3;
+}
+.grid-container > div:nth-child(6) {
+    grid-column: span 3;
+    justify-self: end;
+    align-self: start;
 }
